test_suite/tests/ui/conflict/alias.stderr
error[E0425]: cannot find value `__FAIL__` in this scope
  --> tests/ui/conflict/alias.rs:38:5
   |
38 |     __FAIL__;
   |     ^^^^^^^^ not found in this scope
